--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/boot?useSSL=false&serverTimeZone=UTC
 spring.datasource.username = hbstudent1
 spring.datasource.password=Sohail@99
+server.error.path=/error
 
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 connection.pool.initialPoolSize=5
