--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/boot2?useSSL=false&serverTimeZone=UTC
+#spring_security_custom_user_demo
 spring.datasource.url=jdbc:mysql://localhost:3306/boot?useSSL=false&serverTimeZone=UTC
 spring.datasource.username = hbstudent1
 spring.datasource.password=Sohail@99
